--- a/src/services/Order/Order.API/Properties/launchSettings.json
+++ b/src/services/Order/Order.API/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "Order.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5001",
+      "applicationUrl": "http://localhost:5101",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
