--- a/src/services/Order/Order.API/appsettings.Development.json
+++ b/src/services/Order/Order.API/appsettings.Development.json
@@ -4,5 +4,22 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Port=5432;Database=OrderDb;User Id=admin;Password=sa1234;",
+    "RabbitMq": "amqp://localhost:5672"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "ConsumeTopic": {
+      "FromOrderService": "OrderStream"
+    },
+    "ConsumerGroupId": "2e557075-8a1e-4fd2-999c-1a4154519a27"
+  },
+  "Consul": {
+    "Address": "http://localhost:8500",
+    "ServiceId": "order_1",
+    "ServiceName": "order_service",
+    "ServiceAddress": "http://localhost:5101"
   }
 }
