--- a/src/services/Order/Order.API/appsettings.Development.json
+++ b/src/services/Order/Order.API/appsettings.Development.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5432;Database=OrderDb;User Id=admin;Password=sa1234;",
-    "RabbitMq": "amqp://localhost:5672"
+    "Database": "Server=localhost;Port=5432;Database=OrderDb;User Id=admin;Password=sa1234;"
   },
   "Kafka": {
     "BootstrapServers": "localhost:9092",
