Stock service added.

--- a/src/services/Stock/Stock.API/appsettings.Development.json
+++ b/src/services/Stock/Stock.API/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Port=5432;Database=StockDb;User Id=admin;Password=sa1234;"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "ConsumerGroupId": "3e557075-8a1e-4fd2-999c-1a4154519a27"
+  },
+  "Consul": {
+    "Address": "http://localhost:8500",
+    "ServiceId": "stock_1",
+    "ServiceName": "stock_service",
+    "ServiceAddress": "http://localhost:5102"
   }
 }
