--- a/src/services/Stock/Stock.API/Properties/launchSettings.json
+++ b/src/services/Stock/Stock.API/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "Stock.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5016",
+      "applicationUrl": "http://localhost:5102",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
