--- a/src/services/Stock/Stock.Application/Stock.Application.csproj
+++ b/src/services/Stock/Stock.Application/Stock.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\core\Core.Application\Core.Application.csproj" />
+    <ProjectReference Include="..\Stock.Domain\Stock.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
