ocelot and consul implemented. bugfixes.

--- a/src/services/Gateway/Gateway.API/Properties/launchSettings.json
+++ b/src/services/Gateway/Gateway.API/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "Gateway.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5110",
+      "applicationUrl": "http://localhost:5100",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
