--- a/src/services/Order/Order.API/appsettings.Development.json
+++ b/src/services/Order/Order.API/appsettings.Development.json
@@ -14,8 +14,15 @@
   },
   "Consul": {
     "Address": "http://localhost:8500",
-    "ServiceId": "order_1",
+    "ServiceId": "order_2",
     "ServiceName": "order_service",
     "ServiceAddress": "http://localhost:5101"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5101"
+      }
+    }
   }
 }
